# onecodex

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  REFACTOR_TODOS.md  TODOs.md  circle.yml  codecov.yml  demo_new_api.py  onecodex.py  push_to_pypi.sh  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini  tox.setup.ini
.buildkite/: pipeline.yml
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docker.yml  gh-pages.yml  pre-commit.yml  test.yml  type-check.yml  wasm_test.yml
.pytest_cache/v/cache/: lastfailed  nodeids
docs/: SKILL.md  conf.py  enums.rst  index.rst  models.rst  notebooks.rst  requirements.txt  sample_collection.rst  skill.rst  statistics.rst  taxonomy.rst  visualization.rst
docs/notebook_examples/: notebooks_demo.ipynb
notebook_examples/: example.ipynb  notebooks_demo.ipynb
onecodex/: __init__.py  analyses.py  api.py  api_v0.py  auth.py  cache.py  classification_results.py  cli.py  client.py  dataframes.py  distance.py  exceptions.py  helpers.py  input_helpers.py  metadata_upload.py  new_api.py  reports.py  requests_client.py  stats.py  taxonomy.py  utils.py  version.py
onecodex/assets/: notebook_template.css  notebook_template.less  notebook_template.scss  notebook_template.tpl
onecodex/lib/: __init__.py  auth.py  distance_metrics.py  download.py  enums.py  files.py  helpers.py  inline_validator.py  old_upload.py  sniff.py  taxonomy.py  upload.py
onecodex/lib/distance_metrics/: distance_metrics.py  helpers.py
onecodex/lib/diversity/: diversity.py  helpers.py
onecodex/models/: __init__.py  analyses.py  analysis.py  base.py  base_sample_collection.py  collection.py  darwin.py  experimental.py  filters.py  generated.py  genome.py  helpers.py  misc.py  mixins.py  new_collection.py  resource_list.py  sample.py  samples.py
onecodex/models/pydantic/: __init__.py  analysis.py  base.py  misc.py  sample.py
onecodex/models/schemas/: __init__.py  analysis.py  base.py  genome.py  misc.py  sample.py  types.py
onecodex/notebooks/: exporters.py  report.py
onecodex/scripts/: export_functional_metric.py  filter_fastq.py  filter_reads.py  interleave.py  subset_reads.py
onecodex/viz/: Untitled.ipynb  __init__.py  _bargraph.py  _distance.py  _functional.py  _heatmap.py  _metadata.py  _pca.py  _primitives.py  distance.py  heatmap.py  helpers.py  metadata.py  pca.py
onecodex/viz/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
onecodex/viz/_custom_plots/: __init__.py  collection.py  enums.py  export.py  helpers.py  metadata.py  models.py  pyodide.py  utils.py
scripts/: generate_models.py  generate_openapi_models.py
tests/: __init__.py  auth_tests.py  cli_tests.py  conftest.py  test_analyses.py  test_analysis.py  test_api.py  test_api_models.py  test_auth.py  test_cache.py  test_circular_resolutions.py  test_classifications.py  test_cli.py  test_collection.py  test_custom_plots.py  test_dataframes.py  test_distance.py  test_download.py  test_enums.py  test_experimental.py  test_exporters.py  test_filters_drift.py  test_fixtures.py  test_functional_profiles.py  test_helpers.py  test_inline_validator.py  test_input_helpers.py  test_lib.py  test_metadata_upload.py  test_minimal.py  test_misc_helpers.py  test_mlsts.py  test_notebooks.py  test_raven.py  test_reports.py  test_scripts.py  test_simplejson.py  test_speed.py  test_stats.py  test_taxonomy.py  (+6 more)
tests/api_data/: account.json  alignments.json  analyses.json  classifications.json  documents.json  functional_profiles.json  generate.py  jobs.json  metadata.json  panels.json  samples.json  schema.json  schema_account.json  schema_alignments.json  schema_all.json  schema_analyses.json  schema_classifications.json  schema_controls.json  schema_jobs.json  schema_metadata.json  schema_panels.json  schema_projects.json  schema_reports.json  schema_samples.json  schema_tags.json  schema_users.json  tags.json  users.json
tests/data/: schema.json
tests/data/api/: 3e7119ee74954abd_metadata.json  4a668ac6daf74364.json  4a668ac6daf74364_table.json  6b69295478de4f1f_metadata.json  6be1bb8849644f7b_metadata.json  complete_analyses.json  complete_analysis_one.json  complete_analysis_two.json  d61f459d077d4cd0.json  d61f459d077d4cd0_table.json  incomplete_analyses.json  incomplete_analysis_one.json  metadata.json  sample.json  where_224b53797444f846c4.json
tests/data/cli/: analysis.json  (+3 more)
tests/wasm_test_runner/: index.js  package-lock.json  package.json
wasm_test_runner/: index.js
(+51 files in other folders)
